# codex-ds-proxy

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  Makefile  README.md  anthropic_adapter.py  app.py  autostart.py  config_manager.py  docker-compose.yml  docker-entrypoint.sh  package-lock.json  proxy.py  requirements-linux.txt  requirements.txt  start.sh  system_tray.py
.github/workflows/: release.yml
desktop-app/: index.html  package-lock.json  package.json  tailwind.config.js
desktop-app/proxy/: anthropic_adapter.py  app.py  web_ui.py
desktop-app/proxy/providers/: __init__.py  base.py  deepseek.py
desktop-app/proxy/static/css/: style.css
desktop-app/proxy/static/js/: app.js
desktop-app/scripts/: copy-proxy-to-app.sh  gen_ico.py  gen_source_icon.py  generate-icons.sh  inject-proxy.sh
desktop-app/src/: App.tsx  main.tsx  styles.css  types.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: config.rs  lib.rs  main.rs  proxy_manager.rs
desktop-app/src/components/: LogPanel.tsx  ProxyToggle.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusCard.tsx
providers/: base.py  deepseek.py
static/js/: app.js
templates/: index.html
