[package]
name = "codex-ds-proxy"
version = "1.0.0"
description = "Codex-DS 代理 - 将 Claude Codex/Desktop 无缝切换到 DeepSeek"
authors = ["Codex-DS"]
edition = "2021"

[lib]
name = "codex_ds_proxy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
